tests/baselines/reference/parserES5ComputedPropertyName4.errors.txt
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName4.ts(1,15): error TS1165: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName4.ts (1 errors) ====
    var v = { get [e]() { } };
                  ~~~
!!! error TS1165: Computed property names are only available when targeting ECMAScript 6 and higher.